# railoxide

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: install-wallet.yml  telegram-release.yml
bins/broadcaster-viewer/: Cargo.toml
bins/broadcaster-viewer/src/: cli.rs  main.rs
bins/wallet/: Cargo.toml  build.rs
bins/wallet/assets/icons/: SOURCES.md
bins/wallet/packaging/icons/macos/: RailOxide.icns
bins/wallet/packaging/macos/: Info.plist
bins/wallet/src/: assets.rs  cli.rs  main.rs  root.rs
bins/wallet/src/root/: actions.rs  address_book.rs  broadcaster_picker.rs  broadcaster_preferences.rs  broadcaster_view.rs  chain_load.rs  dialogs.rs  gas_fee.rs  key_export.rs  manage_wallets.rs  network.rs  platform_attention.rs  private_action.rs  private_assets.rs  private_broadcaster.rs  public_account.rs  public_action.rs  public_balances.rs  public_broadcaster.rs  public_broadcaster_cost.rs  settings.rs  shell.rs  sidebar.rs  spend_authorization.rs  startup.rs  tests.rs  tokens.rs  ui_helpers.rs  utxo.rs  vault.rs  vault_ui.rs  wallet_header.rs  walletconnect.rs
bins/wallet/src/root/private_action/: delivery.rs  form_lifecycle.rs  generation.rs  helpers.rs  recipient_picker.rs  render_forms.rs  render_helpers.rs  self_broadcast.rs  types.rs
bins/wallet/src/root/private_broadcaster/: progress.rs  types.rs
bins/wallet/src/root/public_account/: components.rs  hardware.rs  identicon.rs  qr.rs  types.rs
bins/wallet/src/root/public_action/: controls.rs  progress.rs  root.rs  stepper.rs  types.rs
bins/wallet/src/root/settings/: apply_mode.rs  editor.rs  network.rs  render.rs  root.rs  tokens.rs  types.rs  ui_helpers.rs
bins/wallet/src/root/tests/: address_book.rs  amounts_and_balances.rs  broadcasters.rs  chain_loading.rs  helpers.rs  key_export.rs  private_assets.rs  private_display.rs  progress.rs  settings.rs  utxo_rows.rs  wallet_management.rs
bins/wallet/src/root/vault/: change_password.rs  errors.rs  inputs.rs  lifecycle.rs  selection.rs  setup.rs  types.rs
bins/wallet/src/root/vault/hardware/: creation.rs  dialog.rs  labels.rs  mod.rs  parsing.rs  picker.rs  progress.rs  types.rs
bins/wallet/src/root/vault_ui/: trezor.rs
bins/wallet/src/root/walletconnect/: account_select.rs  helpers.rs  relay.rs  render.rs  requests.rs  root.rs  tests.rs
bins/wallet/src/root/walletconnect/root/: attention.rs  connection.rs  pairing.rs  relay_lifecycle.rs  request_actions.rs  request_dialog.rs  session_dialogs.rs  toolbar.rs
bins/wallet/src/root/walletconnect/tests/: approval.rs  attention.rs  display.rs  fixtures.rs  pairing.rs  proposal.rs  relay_protocol.rs  relay_worker.rs  request_expiry.rs  request_progress.rs  session_lifecycle.rs
crates/broadcaster-monitor/: Cargo.toml
crates/broadcaster-monitor-gpui/: Cargo.toml
crates/broadcaster-monitor-gpui/src/: fees_view.rs  lib.rs  peers_view.rs  root.rs
crates/broadcaster-monitor-waku/: Cargo.toml
crates/broadcaster-monitor-waku/src/: lib.rs  waku_task.rs
crates/broadcaster-monitor/src/: lib.rs  state.rs
crates/railgun-ui/assets/tokens/: SOURCES.md
crates/railgun-ui/src/: chains.rs  lib.rs  tokens.rs
crates/ui/: Cargo.toml
crates/ui/src/: clipboard.rs  controls.rs  icons.rs  lib.rs  logs.rs  style.rs  theme.rs
crates/wallet-ops/: Cargo.toml
crates/wallet-ops/examples/: hardware_derivation_probe.rs
crates/wallet-ops/src/: amounts.rs  anchors.rs  desktop.rs  hardware.rs  hardware_typed_data.rs  http.rs  lib.rs  native_topup.rs  poi_contexts.rs  public_wallet.rs  settings.rs  signer.rs  tests.rs  utxos.rs  vault.rs
crates/wallet-ops/src/desktop/: private_tx.rs  prover_cache.rs  public_broadcaster.rs  public_broadcaster_submit.rs  requests.rs  self_broadcast.rs  sessions.rs  sync_helpers.rs
crates/wallet-ops/src/hardware/: client.rs  derivation.rs  error.rs  ledger.rs  path.rs  public_account.rs  trezor.rs  types.rs
crates/wallet-ops/src/hardware/trezor/: bridge.rs  client.rs  passphrase.rs  tests.rs  transaction.rs  transport.rs  typed_data.rs
crates/wallet-ops/src/public_wallet/: actions.rs  balances.rs  contracts.rs  gas.rs  runtime.rs  signer.rs  submission.rs  tests.rs  types.rs  walletconnect.rs
crates/wallet-ops/src/settings/: core.rs  effective.rs  indexed_artifacts.rs  network_chains.rs  poi_broadcaster.rs  storage.rs  tests.rs  tokens_gas_waku.rs  validation.rs  walletconnect.rs
crates/wallet-ops/src/tests/: amounts.rs  blocked_shield_rescue.rs  helpers.rs  native_topup.rs  poi_contexts.rs  public_broadcaster.rs  self_broadcast.rs  signer.rs  sync_start.rs  utxos.rs
crates/wallet-ops/src/vault/: core.rs  crypto.rs  models.rs  records.rs  store.rs  tests.rs  unlock.rs  view_cache.rs
crates/wallet-ops/src/vault/store/: address_book.rs  base.rs  broadcaster_preferences.rs  chain_cache.rs  hardware.rs  key_export.rs  public_accounts.rs  record_io.rs  wallet_metadata.rs  walletconnect.rs  wallets.rs
crates/wallet-ops/src/vault/tests/: address_book.rs  broadcaster_preferences.rs  core_crypto.rs  encrypted_cache.rs  first_run.rs  hardware.rs  helpers.rs  key_export.rs  public_accounts.rs  wallet_metadata.rs  wallet_storage.rs  walletconnect_sessions.rs
crates/wallet-ops/src/walletconnect/: crypto.rs  eip155.rs  lifecycle.rs  mod.rs  namespace.rs  pairing.rs  relay.rs  request.rs  session.rs  tests.rs  uri.rs
crates/wallet-ops/src/walletconnect/tests/: approval.rs  crypto.rs  helpers.rs  lifecycle.rs  namespace.rs  pairing.rs  relay.rs  request.rs  uri.rs
docs/: build-wallet-macos.md  build-wallet-ubuntu.md  build-wallet-windows.md  install-from-source.md  nixos.md  privacy-model.md
scripts/: generate-wallet-icons  install-wallet  install-wallet.ps1  package-wallet-macos
