[package]
name = "wallet"
version = "0.1.0-alpha.1"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
hardware = ["wallet-ops/hardware"]

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true }
chrono = { workspace = true }
directories = "6"
eyre = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
qrcodegen = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rust-embed = "8.11"
structopt = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "parking_lot"] }
zeroize = { workspace = true }

broadcaster-monitor = { path = "../../crates/broadcaster-monitor" }
broadcaster-monitor-gpui = { path = "../../crates/broadcaster-monitor-gpui" }
broadcaster-monitor-waku = { path = "../../crates/broadcaster-monitor-waku" }
railgun-ui = { path = "../../crates/railgun-ui" }
ui = { path = "../../crates/ui" }
wallet-ops = { path = "../../crates/wallet-ops" }

[lints]
workspace = true
