[package]
name = "wallet"
version = "0.1.0-alpha.4"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
hardware = ["wallet-ops/hardware"]

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true }
chrono = { workspace = true }
directories = "6"
eyre = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
qrcodegen = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rust-embed = "8.11"
serde_json = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "parking_lot"] }
zeroize = { workspace = true }

broadcaster-monitor = { path = "../../crates/broadcaster-monitor" }
broadcaster-monitor-gpui = { path = "../../crates/broadcaster-monitor-gpui" }
broadcaster-monitor-waku = { path = "../../crates/broadcaster-monitor-waku" }
railgun-ui = { path = "../../crates/railgun-ui" }
ui = { path = "../../crates/ui" }
wallet-ops = { path = "../../crates/wallet-ops" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSDockTile", "NSResponder"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[lints]
workspace = true
