[package]
name = "broadcaster-monitor-waku"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
broadcaster-monitor = { path = "../broadcaster-monitor" }
eyre = { workspace = true }
public-broadcaster-protocol = { path = "../public-broadcaster-protocol" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
tracing = { workspace = true }
waku = { path = "../waku" }
waku-relay = { path = "../waku-relay" }

[dev-dependencies]
alloy = { workspace = true }
libp2p = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
