[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["parking_lot"] }
url = { workspace = true }

[lints]
workspace = true
