[package]
name = "wallet-ops"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
hardware = [
    "dep:coins-ledger",
    "dep:hidapi-rusb",
    "dep:protobuf",
    "dep:serde_json",
    "dep:trezor-client",
]

[[example]]
name = "hardware_derivation_probe"
required-features = ["hardware"]

[dependencies]
alloy = { workspace = true, features = ["provider-http", "rpc-types", "network", "signers"] }
alloy-provider = { workspace = true }
arti-client = { workspace = true, features = ["onion-service-client"] }
argon2 = { workspace = true }
async-trait = { workspace = true }
chacha20poly1305 = { workspace = true }
coins-ledger = { workspace = true, optional = true }
eyre = { workspace = true }
getrandom = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
hidapi-rusb = { workspace = true, optional = true }
libc = "0.2"
rand = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tor-rtcompat = { workspace = true }
trezor-client = { workspace = true, optional = true }
tracing = { workspace = true }
zeroize = { workspace = true }

broadcaster-core = { path = "../core" }
broadcaster-monitor = { path = "../broadcaster-monitor" }
local-db = { path = "../local-db" }
merkletree = { path = "../merkletree" }
poi = { path = "../poi" }
protobuf = { workspace = true, optional = true }
railgun-wallet = { path = "../railgun-wallet" }
railgun-ui = { path = "../railgun-ui" }
sync-service = { path = "../sync-service" }
waku = { path = "../waku" }
waku-relay = { path = "../waku-relay" }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
